Basic user Login and SignUp setup

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 OPEN_AI_SECRET = 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
 OPEN_AI_ORGANIZATION_ID = org-xRNONEoiEcZVYersNpqzBoau
-MONGODB_URL=mongodb+srv://surabhimahale12:zsmy2yVKUNnsVIHt@cluster0.7ifkcnj.mongodb.net/chatbot?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://surabhimahale12:300221@cluster0.7ifkcnj.mongodb.net/chatbot?retryWrites=true&w=majority
 JWT_SECRET=YOUR_SECRET
 COOKIE_SECRET=YOUR_SECRET
 PORT = 5000
